@@ -10,6 +10,8 @@
 * Dev - Security validation audit.php.wp.security.sqli.shortcode-attr
 * Dev - Security validation scanner.php.wp.security.csrf.nonce-check-not-dying
 * Dev - Security validation WordPress.Security.SafeRedirect.wp_redirect_wp_redirect
+* Dev - Secuirty validation WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+* Update - Revised the review invite notification.
 
 = 3.3.1 =
 * WordPress 6.7 compatible.
